[package]
name = "fenrir"
version = "0.1.1"
authors = ["Flavio Oliveira <flavio@wisespace.io>"]
edition = "2018"

description = "Locates wifi devices using services such as wigle.net"
license = "MIT OR Apache-2.0"
keywords = ["wifi", "geolocation"]
categories = ["authentication"]
repository = "https://github.com/wisespace-io/fenrir"
readme = "README.md"

[dependencies]
surf = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"

[dev-dependencies]
async-std = { version = "1.6", features = ["attributes"] }